<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/sounds_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/settings_menu_sound"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="50dp"/>

        <ToggleButton
            android:id="@+id/sounds_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sounds_text_view"
            android:layout_centerHorizontal="true"
            android:checked="true"
            android:text="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:textOn="@string/toggle_on"/>

        <TextView
            android:id="@+id/colors_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_menu_colors"
            android:layout_below="@id/sounds_toggle_button"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="50dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/background_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_menu_background"
            android:layout_below="@id/colors_text_view"
            android:textColor="@android:color/holo_orange_dark"
            android:paddingLeft="50dp"
            android:textSize="27dp"/>

        <Spinner
            android:id="@+id/color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/font_text_view"
            android:layout_alignBottom="@+id/font_text_view"
            android:layout_alignLeft="@+id/spinner"
            android:layout_alignStart="@+id/spinner"
            android:layout_centerHorizontal="true"
            android:entries="@array/list_of_colors"
            android:background="#f0f0f0"
            android:popupBackground="#f0f0f0">


        </Spinner>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/background_text_view"
            android:layout_alignLeft="@+id/sounds_toggle_button"
            android:layout_alignStart="@+id/sounds_toggle_button"
            android:entries="@array/list_of_colors"
            android:background="#f0f0f0"
            android:popupBackground="#f0f0f0">

        </Spinner>

        <TextView
            android:id="@+id/font_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_menu_font"
            android:layout_below="@id/background_text_view"
            android:textColor="@android:color/holo_orange_dark"
            android:paddingLeft="50dp"
            android:paddingTop="20dp"
            android:textSize="27dp"/>

    </RelativeLayout>

</RelativeLayout>

